# ferrisbot-for-discord

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Containerfile  compose.yaml  ferris.secrets.template.toml
.github/workflows/: ci.yml
.sqlx/: query-3d2a8f90105c675e3782b9ce9de472fae0f8f81a39f266a1b65f794e5183bad3.json  query-7c23aaa6bee20417b010e60a8d38df6711c3979e4b0edc797c9db206f8d79c02.json  query-a3a5f66c9eb088af7484de7dd24e952eb75bbea5018208bff26c532cd014e143.json  query-a676af32ed64dbb812f05ec68efca57b49d5d02d4f67632dc260d840929c2d53.json
migrations/: 0002_create_highlights.sql
src/: checks.rs  lib.rs  types.rs
src/commands/: crates.rs  godbolt.rs  highlight.rs  modmail.rs  moving.rs  utilities.rs
src/commands/playground/: api.rs
